--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 { "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
