--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
@@ -14,6 +15,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
+    "firebase": "^9.8.0",
     "firebase-admin": "^10.1.0"
   },
   "devDependencies": {
