--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "nodemon --inspect server.js"
+    "dev": "nodemon -r dotenv/config server.js",
+    "dev-debug": "nodemon --inspect server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
-    "firebase-admin": "^10.1.0"
+    "firebase-admin": "^10.1.0",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   }
 }
