--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "nodemon -r dotenv/config server.js",
-    "dev-debug": "nodemon --inspect server.js"
+    "dev": "nodemon -r dotenv/config server.js dotenv_config_path=./config/.env",
+    "debug": "nodemon -r dotenv/config --inspect server.js dotenv_config_path=./config/.dev.env"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,7 @@
     "multer": "^1.4.4"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
-    "nodemon": "^2.0.15"
+    "dotenv": "^16.0.1",
+    "nodemon": "^2.0.16"
   }
 }
