--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "description": "",
   "main": "server.js",
   "type": "module",
+  "nodemonConfig": {
+    "ext": "js",
+    "ignore": [
+      "*.test.ts",
+      "db/*",
+      "assets/",
+      "functions/views"
+    ],
+    "delay": "2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "nodemon --inspect server.js"
+    "dev": "nodemon -r dotenv/config --inspect server.js dotenv_config_path=./vars/.env"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +29,7 @@
     "firebase-admin": "^10.1.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "nodemon": "^2.0.15"
   }
 }
