--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "nodemon -r dotenv/config --inspect server.js dotenv_config_path=./vars/.env"
+    "dev": "nodemon -r dotenv/config server.js dotenv_config_path=./vars/.env",
+    "debug": "nodemon -r dotenv/config --inspect server.js dotenv_config_path=./vars/.env"
   },
   "author": "",
   "license": "ISC",
@@ -25,8 +26,11 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
+    "express-session": "^1.17.3",
     "firebase": "^9.8.0",
-    "firebase-admin": "^10.1.0"
+    "firebase-admin": "^10.1.0",
+    "request": "^2.88.2",
+    "response": "^0.18.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
