--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r dotenv/config server.js dotenv_config_path=./vars/.env",
+    "start": "node server.js",
     "dev": "nodemon -r dotenv/config server.js dotenv_config_path=./vars/.env",
     "debug": "nodemon -r dotenv/config --inspect server.js dotenv_config_path=./vars/.env"
   },
